🐛 Fix overflow in settings section

--- a/src/app/components/Settings/Settings.module.css
+++ b/src/app/components/Settings/Settings.module.css
@@ -3,6 +3,7 @@
   display: grid;
   align-content: baseline;
   row-gap: 1rem;
+  overflow: auto;
 }
 
 .label {
